# bdrm

./: .gitignore  CMakeLists.txt  LICENSE.md  PROPERTIES.md  test.sh
include/: atomic.hpp  bdrm.hpp  connector.hpp  crtc.hpp  plane.hpp  resources.hpp  utils.hpp
include/atomic/: connectorreq.hpp  crtcreq.hpp  planereq.hpp
include/bdrm/: buffer.hpp  node.hpp  types.hpp
include/resources/: buffer.hpp  connector.hpp  crtc.hpp  framebuffer.hpp  plane.hpp
include/utils/: gbm.hpp
src/: atomic.cpp  bdrm.cpp  connector.cpp  crtc.cpp  main.cpp  plane.cpp  resources.cpp  utils.cpp
src/atomic/: connectorreq.cpp  crtcreq.cpp  planereq.cpp
src/bdrm/: buffer.cpp  node.cpp
src/resources/: buffer.cpp  connector.cpp  crtc.cpp  framebuffer.cpp  plane.cpp
src/utils/: gbm.cpp
